--- a/ProyectoIntegrador_IbanezCarlos/src/index.html
+++ b/ProyectoIntegrador_IbanezCarlos/src/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <h1>Bienvenido a mi Proyecto Integrador Final ARgentinPrograma</h1>
+  <h1>Bienvenido</h1>
   <h2>#YoProgramo</h2>
   <app-root></app-root>
 </body>
